# bewise_application

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 8f954c037b2d_init.py
src/: depends.py  kafka_producer.py  main.py  models.py  schemas.py
src/conf/: __init__.py  database.py  producer.py  settings.py
tests/: conftest.py  utils.py
tests/applications/: test_api.py  test_db.py
